[package]
name = "board_plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
inspect = ["colored", "bevy-inspector-egui"]

[dependencies]
bevy = "0.13"
serde = "1.0"
rand = "0.8"
colored = { version = "2.1", optional = true }
bevy-inspector-egui = { version = "0.23", optional = true }
bevy_round_ui = "0.2"

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]
