[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

[features]
default = []
inspect = ["board_plugin/inspect", "bevy-inspector-egui"]

[dependencies]
bevy = "0.13"
board_plugin = { path = "../board_plugin" }
bevy_round_ui = "0.2"
bevy-inspector-egui = { version = "0.23", optional = true }

# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code
[profile.dev]
opt-level = 1